Auto-set preview range sets superfluous end key. #45995

Closed
opened 2015-09-02 16:13:22 +02:00 by Julio Iglesias · 4 comments

Blender Version
2.75.4

Short description of error
Auto-set preview range sets an extra end key when any object has a single keyframe in the "intended" end.

Exact steps for others to reproduce the error
In the attached blend, you can see there is a single Location key in the end which makes "Auto-set preview range" option set an extra end frame. In this example, it's easy to fix, but while working on a character with a huge bone list, it breaks the workflow many times...

I guess this can't really be considered a bug or error, but if you look at the dopesheet, and you see all those keyframes aligned in the end, I think every user would expect the end frame to be set right there, not 1 more frame beyond that point.

untitled.blend

**Blender Version** 2.75.4 **Short description of error** Auto-set preview range sets an extra end key when any object has a single keyframe in the "intended" end. **Exact steps for others to reproduce the error** In the attached blend, you can see there is a single Location key in the end which makes "Auto-set preview range" option set an extra end frame. In this example, it's easy to fix, but while working on a character with a huge bone list, it breaks the workflow many times... I guess this can't really be considered a bug or error, but if you look at the dopesheet, and you see all those keyframes aligned in the end, I think every user would expect the end frame to be set right there, not 1 more frame beyond that point. [untitled.blend](https://archive.blender.org/developer/F229904/untitled.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Zafio

Added subscriber: @Zafio
Bastien Montagne self-assigned this 2015-09-02 17:46:53 +02:00

This issue was referenced by c8cc664ce3

This issue was referenced by c8cc664ce3588aedcfe6933e82130c6d0c8a0e14

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45995
No description provided.